fixed changes for render

--- a/.env
+++ b/.env
@@ -1,9 +1,12 @@
 # Flask Configuration
 FLASK_ENV=development
-SECRET_KEY=dev-secret-key-change-in-production
+SECRET_KEY=your-super-secret-production-key-change-this-12345
 
-# Database Configuration - MySQL only
+# Database Configuration - MySQL for Development
 DATABASE_URL=mysql+mysqlconnector://root:password@localhost/mechanicshopdata
+
+# PostgreSQL for Production (Render)
+SQLALCHEMY_DATABASE_URI=postgresql://adam:Kgz9SQIrNnUBcCuGy462uiGOcFdiBOP3@dpg-d4hjgondiees73bjvsug-a.ohio-postgres.render.com/mechanicapi_lkyz
 
 # Development Settings
 DEBUG=True
