--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ marshmallow-sqlalchemy==1.1.0
 marshmallow==3.22.0
 Flask-Migrate==4.0.7
 mysql-connector-python==8.2.0
-python-dotenv==1.0.0
 requests==2.31.0
+psycopg2-binary==2.9.9
 Flask-Limiter==3.5.0
 Flask-Caching==2.1.0
 python-jose==3.3.0
@@ -15,3 +15,4 @@ bcrypt==4.1.2
 flasgger==0.9.7.1
 flask-swagger==0.2.14
 flask-swagger-ui==4.11.1
+gunicorn==21.2.0
