--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ marshmallow==3.22.0
 Flask-Migrate==4.0.7
 mysql-connector-python==8.2.0
 requests==2.31.0
-psycopg2==2.9.9
+psycopg[binary]==3.1.18
 Flask-Limiter==3.5.0
 Flask-Caching==2.1.0
 python-jose==3.3.0
