--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Environment variables
 .env
+.env.local
+.env.*.local
 
 # Python
 __pycache__/
@@ -17,11 +19,26 @@ venv/
 ENV/
 env/
 
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+.npm
+.yarn
+.yarn-integrity
+
 # IDEs
 .vscode/
 .idea/
 *.swp
 *.swo
+
+# Logs
+logs/
+*.log
 
 # Database
 *.db
@@ -32,8 +49,11 @@ instance/
 # OS
 .DS_Store
 Thumbs.db
+*.tmp
+*.temp
 
 # Testing
 .coverage
 htmlcov/
 .pytest_cache/
+coverage/
