--- a/backend/package.json
+++ b/backend/package.json
@@ -4,25 +4,34 @@
   "description": "Firebase Cloud Functions for Mechanic Shop API",
   "main": "index.js",
   "scripts": {
-    "serve": "firebase emulators:start --only functions",
+    "serve": "firebase emulators:start --only functions,firestore",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "test": "cross-env FIRESTORE_EMULATOR_HOST=localhost:8080 mocha test/**/*.test.js --timeout 10000 --exit",
+    "test:watch": "cross-env FIRESTORE_EMULATOR_HOST=localhost:8080 mocha test/**/*.test.js --timeout 10000 --watch",
+    "seed": "node scripts/seedData.js",
+    "seed:emulator": "cross-env FIRESTORE_EMULATOR_HOST=localhost:8080 node scripts/seedData.js"
   },
   "engines": {
     "node": "20"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^5.0.0",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "eslint": "^8.57.0"
+    "@firebase/rules-unit-testing": "^3.0.4",
+    "axios": "^1.13.4",
+    "chai": "^4.5.0",
+    "cross-env": "^10.1.0",
+    "eslint": "^8.57.0",
+    "mocha": "^10.8.2"
   },
   "private": true
 }
