--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
   "functions": [
     {
-      "source": "backend",
+      "source": "mechanic-shop-backend",
       "codebase": "default",
       "ignore": [
         "node_modules",
