--- a/.env
+++ b/.env
@@ -1,18 +1,6 @@
-# Flask Configuration
-FLASK_ENV=development
-SECRET_KEY=your-super-secret-production-key-change-this-12345
-
-# Database Configuration - MySQL for Development
-DATABASE_URL=mysql+mysqlconnector://root:password@localhost/mechanicshopdata
-
-# PostgreSQL for Production (Render)
-SQLALCHEMY_DATABASE_URI=postgresql+psycopg://adam:Kgz9SQIrNnUBcCuGy462uiGOcFdiBOP3@dpg-d4hjgondiees73bjvsug-a.ohio-postgres.render.com/mechanicapi_lkyz
+# Firebase Project Configuration
+# Note: Firebase Admin SDK uses Application Default Credentials when deployed
+# For local development, set GOOGLE_APPLICATION_CREDENTIALS if needed
 
 # Development Settings
-DEBUG=True
-
-# MySQL Connection Requirements:
-# - MySQL server must be running
-# - Create database: CREATE DATABASE mechanicshopdata;
-# - Verify connection: mysql -u root -p
-# - Enter password: password
+NODE_ENV=development
