--- a/mechanic-shop-backend/package.json
+++ b/mechanic-shop-backend/package.json
@@ -21,12 +21,12 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase": "^12.9.0",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^5.0.0",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "@firebase/rules-unit-testing": "^3.0.4",
     "axios": "^1.13.4",
     "chai": "^4.5.0",
     "cross-env": "^10.1.0",
