--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,82 +1,104 @@
-name: Flask CI
+name: Firebase CI/CD
 
 on:
   push:
-    branches: [main, master]
+    branches: [main]
   pull_request:
-    branches: [main, master]
+    branches: [main]
 
 jobs:
-  build:
+  # Backend Tests
+  backend-test:
+    name: Backend Tests
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          python-version: 3.12
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: mechanic-shop-backend/package-lock.json
 
-      - name: Create virtual environment
+      - name: Install backend dependencies
         run: |
-          python -m venv venv
-          source venv/bin/activate
+          cd mechanic-shop-backend
+          npm ci
 
-      - name: Install dependencies
+      - name: Run backend tests
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
+          cd mechanic-shop-backend
+          npm test
 
-      - name: Print debugging information
-        run: |
-          echo "Python Version: $(python --version)"
-          echo "Working Directory: $(pwd)"
-          echo "Contents of Working Directory: $(ls -l)"
-          echo "Contents of site-packages: $(ls -l venv/lib/python*/site-packages)"
-
-  test:
-    needs: build
+  # Frontend Build & Test
+  frontend-test:
+    name: Frontend Build & Test
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          python-version: 3.12
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: mechanic-shop-frontend/package-lock.json
 
-      - name: Create virtual environment
+      - name: Install frontend dependencies
         run: |
-          python -m venv venv
-          source venv/bin/activate
+          cd mechanic-shop-frontend
+          npm ci
 
-      - name: Install dependencies
+      - name: Lint frontend
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
+          cd mechanic-shop-frontend
+          npm run lint
+        continue-on-error: true
 
-      - name: Run tests
-        env:
-          FLASK_ENV: testing
+      - name: Build frontend
         run: |
-          python -m unittest discover -s tests -p 'test_*.py'
+          cd mechanic-shop-frontend
+          npm run build
 
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-dist
+          path: mechanic-shop-frontend/dist
+          retention-days: 1
+
+  # Deploy to Firebase
   deploy:
-    needs: test
+    name: Deploy to Firebase
+    needs: [backend-test, frontend-test]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
 
     steps:
-      - name: Deploy to Render
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: frontend-dist
+          path: mechanic-shop-frontend/dist
+
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
+
+      - name: Deploy to Firebase
         env:
-          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
-          RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         run: |
-          curl -X POST "https://api.render.com/v1/services/$RENDER_SERVICE_ID/deploys" \
-            -H "Authorization: Bearer $RENDER_API_KEY" \
-            -H "Content-Type: application/json" \
-            -d '{"clearCache": false}'
+          firebase deploy --token "$FIREBASE_TOKEN" --non-interactive
