--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -72,10 +72,52 @@ jobs:
           path: mechanic-shop-frontend/dist
           retention-days: 1
 
+  # Playwright E2E Tests
+  e2e-test:
+    name: Playwright E2E Tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install frontend dependencies
+        run: |
+          cd mechanic-shop-frontend
+          npm ci
+
+      - name: Install Playwright dependencies
+        run: |
+          cd mechanic-shop-frontend/e2e-tests
+          npm ci
+
+      - name: Install Playwright Browsers
+        run: |
+          cd mechanic-shop-frontend/e2e-tests
+          npx playwright install --with-deps chromium
+
+      - name: Run Playwright tests
+        run: |
+          cd mechanic-shop-frontend/e2e-tests
+          npm test
+
+      - name: Upload Playwright Report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-report
+          path: mechanic-shop-frontend/e2e-tests/playwright-report/
+          retention-days: 7
+
   # Deploy to Firebase
   deploy:
     name: Deploy to Firebase
-    needs: [backend-test, frontend-test]
+    needs: [backend-test, frontend-test, e2e-test]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
 
