--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,9 @@ package-lock.json
 yarn.lock
 pnpm-lock.yaml
 
+# Allow package-lock.json in e2e-tests for CI/CD
+!**/e2e-tests/package-lock.json
+
 # Vite
 dist/
 dist-ssr/
