--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -9,8 +9,6 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    env:
-      FIREBASE_PROJECT_ID: mechanicshopapi
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -19,6 +17,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
+          cache: "npm"
+          cache-dependency-path: |
+            mechanic-shop-frontend/package-lock.json
+            mechanic-shop-backend/package-lock.json
 
       - name: Install frontend dependencies
         working-directory: mechanic-shop-frontend
@@ -38,4 +40,4 @@ jobs:
       - name: Deploy to Firebase
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        run: firebase deploy --project "$FIREBASE_PROJECT_ID" --only functions,hosting,firestore:rules,firestore:indexes
+        run: firebase deploy --only functions,hosting,firestore:rules,firestore:indexes
