--- a/firebase.json
+++ b/firebase.json
@@ -29,6 +29,10 @@
     ],
     "rewrites": [
       {
+        "source": "/api/**",
+        "function": "api"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
