--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
 Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
 Flask-Marshmallow==1.2.1
-Flask-CORS==4.0.0
+Flask-CORS==4.0.1
 marshmallow-sqlalchemy==1.1.0
-marshmallow==3.22.0
+marshmallow==3.23.1
 Flask-Migrate==4.0.7
-mysql-connector-python==8.2.0
-requests==2.31.0
-psycopg[binary]==3.2.3
+mysql-connector-python==8.4.0
+requests==2.32.3
+psycopg[binary]==3.2.13
 Flask-Limiter==3.5.0
 Flask-Caching==2.1.0
-python-jose==3.3.0
+PyJWT==2.9.0
 passlib==1.7.4
 bcrypt==4.1.2
 flasgger==0.9.7.1
 flask-swagger==0.2.14
 flask-swagger-ui==4.11.1
-gunicorn==21.2.0
+gunicorn==23.0.0
