feat: add environment variable for VITE_FIREBASE_API_KEY in frontend build step

--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -28,6 +28,8 @@ jobs:
 
       - name: Build frontend
         working-directory: mechanic-shop-frontend
+        env:
+          VITE_FIREBASE_API_KEY: ${{ secrets.VITE_FIREBASE_API_KEY }}
         run: npm run build
 
       - name: Install functions dependencies
